Another popular exploit

--- a/src/Belletrix.Web/Web.config
+++ b/src/Belletrix.Web/Web.config
@@ -90,6 +90,7 @@
           <add segment="administrator" />
           <add segment="CFIDE" />
           <add segment="cgi-bin" />
+          <add segment="check_proxy" />
           <add segment="fckeditor.js" />
           <add segment="muieblackcat" />
           <add segment="phpMyAdmin" />
